# routes/index.js
@@ -1,12 +1,16 @@
 const router = require('express').Router();
 const users = require('./users');
 const transactions = require('./transactions.js');
+const budgets = require('./budgets.js');
+const categories = require('./categories.js');
 
 let docData;
 
 // TO ROUTES
 router.use('/users', users);
 router.use('/transactions', transactions);
+router.use('/budgets', budgets);
+router.use('/categories', categories);
 
 // TO OAUTH
 router.use('/', require('./oauth.js'));
